query candidate
